--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -304,6 +304,7 @@
   },
   "adminList": {
     "userInfo": "مشخصات کاربر",
+    "adminInfo": "مشخصات ادمین",
     "userType": "نوع کاربری",
     "systemAdminDescription": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
     "admin": "ادمین",
