refactor:update edit modal

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -111,7 +111,8 @@
     "deleteAdmin": "Delete Admin",
     "editAdminInfo": "Edit Admin Info",
     "addNewFile":"New File",
-
+    "editFile":"Edit File",
+    "chooseTypeFileAndLicenses":"Choose type file and licenses",
     "lastLogout": "Last Logout",
     "setting": "Setting",
     "timing": "Timing",
