fix:fixed bug in review

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -345,7 +345,9 @@
     "daasProvider": "Daas provider baseURL",
     "clientIDP": "clinet id",
     "secretP": "secret",
-    "realmP": "realm"
+    "realmP": "realm",
+    "sso":"SSO",
+    "manager":"Manager"
   },
 
   "regexPattern": {
