fix: update translate file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -266,7 +266,8 @@
     "save": "Save",
     "remove": "Delete",
     "sureAboutDeleteUser": "Are you sure want to delete the user?",
-    "all": "Select All"
+    "all": "Select All",
+    "deleteUser": "Delete User"
   },
   "groupManagement": {
     "person": "person",
