--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -267,7 +267,8 @@
     "save": "ذخیره",
     "remove": "حذف مورد",
     "sureAboutDeleteUser": "آیا از حذف این کاربر مطمئن هستید؟",
-    "all": "انتخاب همه"
+    "all": "انتخاب همه",
+    "deleteUser": "حذف کاربر"
   },
   "groupManagement": {
     "person": "نفر",
