feat drop Table and getting data

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -282,7 +282,9 @@
     "next": "Next",
     "newUser": "new user",
     "newGroup": "New Group",
-    "onlineUsers": "Online Users"
+    "onlineUsers": "Online Users",
+    "groupName": " Group Name",
+    "searchGroup": "Search Group"
   },
   "onlineAssistance": {
     "loginType": "Login type",
