--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -283,7 +283,9 @@
     "next": "مرحله بعد",
     "newUser": "کاربر جدید",
     "newGroup": "گروه جدید",
-    "onlineUsers": "کاربران آنلاین"
+    "onlineUsers": "کاربران آنلاین",
+    "groupName": "نام گروه ",
+    "searchGroup": "جستجوی گروه"
   },
   "onlineAssistance": {
     "loginType": "نوع ورود",
