--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -308,6 +308,10 @@
     "userInfo": "User Info",
     "adminInfo": "Admin Info",
     "userType": "User type",
+    "createNewAdmin": "Create new admin",
+    "createNewAdminText": "Enter the details to create a new admin and select the required permissions",
+    "editInformation": "Edit information",
+    "editInformationText": "Change the admin’s profile",
     "systemAdminDescription": "Please note that the user recognized as a administrator has the ability to add and remove other admins.",
     "admin": "Admin",
     "metaAdmin": "Administrator",
