--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -310,6 +310,10 @@
     "userInfo": "مشخصات کاربر",
     "adminInfo": "مشخصات ادمین",
     "userType": "نوع کاربری",
+    "createNewAdmin": "ساخت ادمین جدید",
+    "createNewAdminText": "برای ساختن ادمین جدید مشخصات را وارد کنید و دسترسی های مورد نیاز را انتخاب کنید. ",
+    "editInformation": "ویرایش مشخصات ",
+    "editInformationText": "تغییر مشخصات و لیست دسترسی‌های ادمین.",
     "systemAdminDescription": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
     "admin": "ادمین",
     "metaAdmin": "سوپر ادمین",
