fix: add ModalContent to pages

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -314,7 +314,7 @@
     "createNewAdmin": "ساخت ادمین جدید",
     "createNewAdminText": "برای ساختن ادمین جدید مشخصات را وارد کنید و دسترسی های مورد نیاز را انتخاب کنید. ",
     "editInformation": "ویرایش مشخصات ",
-    "editInformationText": "تغییر مشخصات و لیست دسترسی‌های ادمین.",
+    "editInformationText": "مشخصات و لیست دسترسی‌های ادمین.",
     "systemAdminDescription": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
     "admin": "ادمین",
     "metaAdmin": "سوپر ادمین",
