--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -377,7 +377,14 @@
     "secretP": "secret",
     "realmP": "realm",
     "sso": "SSO",
-    "manager": "Manager"
+    "manager": "Manager",
+    "resourceLimitations":"محدودیت منابع",
+    "chrome":"Chrome",
+    "fireFox":"Firefox",
+    "cpu":"CPU (Core)",
+    "core":"Core",
+    "memory":"حافظه (GB)"
+
   },
   "regexPattern": {
     "value": "لطفا لینک معتبر وارد کنید",
