style: add responsive of the table

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -159,6 +159,10 @@
     "adminUserName": "abc@abc.com",
     "changePassword": "Change Password"
   },
+  "knowledgeManagement": {
+    "recoardeActivite": "Recorded activities",
+    "recordedUserActivate": "Recorded user activities"
+  },
   "global": {
     "knowledgeManagement": "Knowledge Management",
     "alphabet": "Alphabet",
