--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -391,6 +391,7 @@
   "setting": {
     "application": "Application",
     "daas": "DaaS",
+    "dlp":"DLP",
     "ssoBaseURL": "SSO base URL",
     "ssoClientID": "SSO client ID",
     "ssoSecret": "SSO Secret",
