--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -289,7 +289,8 @@
     "newGroup": "New Group",
     "onlineUsers": "Online Users",
     "groupName": " Group Name",
-    "searchGroup": "Search Group"
+    "searchGroup": "Search Group",
+    "addMember": "Add Member"
   },
   "onlineAssistance": {
     "loginType": "Login type",
