--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -21,6 +21,7 @@
     "email": "Email",
     "firstNameLastName": "First and Last Name",
     "active": "Active",
+    "deactive":"Deactive",
     "metaAdmin": "Super Admin",
     "dateOfCreated": "Creation Date",
     "lastLogin": "Last Login",
@@ -113,6 +114,7 @@
     "editAdminInfo": "Edit Admin Info",
     "addNewFile": "New File",
     "editFile": "Edit File",
+    "addFile":"Add file",
     "chooseTypeFileAndLicenses": "Choose type file and licenses",
     "lastLogout": "Last Logout",
     "setting": "Setting",
@@ -402,7 +404,8 @@
     "secretP": "secret",
     "realmP": "realm",
     "sso": "SSO",
-    "manager": "Manager"
+    "manager": "Manager",
+    "saveFile":"Save File"
   },
 
   "regexPattern": {
