--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -22,6 +22,7 @@
     "email": "ایمیل",
     "firstNameLastName": "نام و نام خانوادگی",
     "active": "فعال",
+    "deactive":"غیرفعال",
     "metaAdmin": "سوپر ادمین",
     "dateOfCreated": "تاریخ ایجاد",
     "lastLogin": "آخرین ورود",
@@ -113,6 +114,7 @@
     "deleteAdmin": "حذف ادمین",
     "editAdminInfo": "ویرایش مشخصات",
     "editFile": "ویرایش فایل",
+    "addFile":" افزودن فایل جدید",
     "chooseTypeFileAndLicenses": "انتخاب نوع فایل و مجوزها ",
     "addNewFile": "فایل جدید",
     "lastLogout": "آخرین خروج",
@@ -200,7 +202,7 @@
     "successfullyRemoved": "با موفقیت حذف شد",
     "minute": "دقیقه",
     "successfullyAdded": "با موفقیت اضافه شد",
-    "areYouSure": "آیا مطمین هستید؟",
+    "areYouSure": "آیا مطمئن هستید؟",
     "restartTimeUsed": "شروع مجدد زمان استفاده شده",
     "pleaseEnterAgain": "لطفا مجدد وارد شوید",
     "newPassword": "گذرواژه جدید",
@@ -405,7 +407,8 @@
     "secretP": "secret",
     "realmP": "realm",
     "sso": "SSO",
-    "manager": "Manager"
+    "manager": "Manager",
+    "saveFile":"ذخیره فایل"
   },
   "regexPattern": {
     "value": "لطفا لینک معتبر وارد کنید",
