--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -112,6 +112,7 @@
     "userType": "نوع کاربری",
     "deleteAdmin": "حذف ادمین",
     "editAdminInfo": "ویرایش مشخصات",
+    "lastLogout": "آخرین خروج",
     "setting": "تنظیمات",
     "timing": "زمانبندی",
     "connection": "اتصال",
@@ -153,8 +154,7 @@
     "netsep": "نت سپ",
     "scans": "اسکن ها",
     "userBehavior": "رفتار شناسی کاربر",
-    "adminLogin": "ورود و خروج ادمین‌ها",
-    "virusFiles": "فایل های آلوده"
+    "adminLogin": "ورود و خروج ادمین‌ها"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
@@ -236,7 +236,7 @@
     "arbitrary": "دلخواه",
     "send": "ارسال",
     "selectTimeFrame": "بازه ای از زمان را انتخاب کنید",
-    "reportsChart": "نمودارگزارش",
+    "reportsChart": "نمودار گزارش",
     "internetLog": "لاگ های اینترنت",
     "wholeList": "لیست کلی",
     "todayList": "لیست امروز",
