--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -153,7 +153,8 @@
     "netsep": "NetSep",
     "scans": "Scans",
     "userBehavior": "User Behavior",
-    "adminLogin": "Admin Login"
+    "adminLogin": "Admin Login",
+    "virusFiles": "Virus Files"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
