--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -356,7 +356,12 @@
     "clipboardLog": "لاگ کلیپبورد",
     "reportOfTextTransferredViaClipboard": "گزارش متن‌های منتقل‌شده از طریق کلیپ‌بورد.",
     "recordedActivities": "فعالیت های ضبط شده",
-    "recordedUserActivities": "فعالیت های ضبط شده کاربر"
+    "recordedUserActivities": "فعالیت های ضبط شده کاربر",
+    "assistance": "دستیار",
+    "groupAdmin": "ادمین گروه‌ها",
+    "groupMember": "عضویت در گروه‌ها",
+    "assistanceMemberTitle": "در این بخش گروه هایی که کاربر عضو آن می‌باشد مشخص شده است.",
+    "assistanceAdminTitle": "در این بخش گروه هایی که کاربرادمین آن می‌باشد مشخص شده است."
   },
 
   "license": {
