feat(SettingDaasModal): redesign User Access Modal
- Replaced old atomic components with updated versions
- Updated modal appearance to align with new design specs
- Added features for setting max registration time based on selected range

SEP-274: UserAccessModal

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -352,7 +352,8 @@
     "clipboardLog": "Clipboard log",
     "reportOfTextTransferredViaClipboard": "Report of text transferred via clipboard",
     "recordedActivities": "Recorded activities",
-    "recordedUserActivities": "Recorded user activities"
+    "recordedUserActivities": "Recorded user activities",
+    "theFormatIsRepetitive": "The format is repetitive"
   },
   "license": {
     "licenseId": "license Id",
