--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -354,7 +354,8 @@
     "clipboardLog": "لاگ کلیپبورد",
     "reportOfTextTransferredViaClipboard": "گزارش متن‌های منتقل‌شده از طریق کلیپ‌بورد.",
     "recordedActivities": "فعالیت های ضبط شده",
-    "recordedUserActivities": "فعالیت های ضبط شده کاربر"
+    "recordedUserActivities": "فعالیت های ضبط شده کاربر",
+    "theFormatIsRepetitive": "فرمت وارد شده تکراری است."
   },
 
   "license": {
