--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -65,9 +65,11 @@
     "clamav": "clamav",
     "yara": "yara",
     "license_id": "لایسنس",
-    "licenseExpirationDate": "تاریخ انقضالایسنس",
+    "licenseExpirationDate": "تاریخ انقضا",
+    "lisenceName":"نام لایسنس‌ها",
     "licenseCreation": "تاریخ ایجاد لایسنس",
     "validLicense": "اعتبارلایسنس",
+    "licenseStatus": "وضعیت ",
     "string": "رشته فایل",
     "fileExtension": "پسوند فایل",
     "addNewType": "اضافه کردن تایپ جدید",
