--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -101,6 +101,7 @@
     "date": "تاریخ",
     "day": "روز",
     "time": "زمان",
+    "deleteFile": "حذف فایل",
     "play": "اجرا",
     "startDate": "تاریخ شروع",
     "endDate": "تاریخ اتمام",
