style: add table to fileScan

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -14,6 +14,7 @@
     "accessTime": "Access Time",
     "hours": "Hours",
     "today": "Today",
+    "scans": "Scans",
     "usedTime": "Used Time",
     "leftTime": "Remaining Time",
     "extendTime": "Extend Time",
