--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -15,6 +15,7 @@
     "accessTime": "زمان دسترسی",
     "hours": "ساعت",
     "today": "امروز",
+    "scans": "اسکن ها",
     "usedTime": "زمان استفاده شده",
     "leftTime": "زمان باقی مانده",
     "extendTime": "زمان تمدید",
