fix: resulve any type and add translate item

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -450,7 +450,8 @@
     "cardBankNumber": "فقط از اعداد استفاده کنید",
     "price": "لطفا فقط از اعداد استفاده کنید",
     "phoneNumberNoZeroAtStart": "فرمت صحیح موبایل: 9xxxxx1234",
-    "ip": "لطفا فرمت صحیح آی پی را وارد نمایید"
+    "ip": "لطفا فرمت صحیح آی پی را وارد نمایید",
+    "moreThanTwoEnglishLettersAndStartWithADot": "بیشتر از 2 حرف انگلیسی و با نقطه (.) شروع شود."
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
