--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -448,7 +448,8 @@
     "cardBankNumber": "Use only numbers",
     "price": "Please use only numbers",
     "phoneNumberNoZeroAtStart": "Correct mobile format: 9xxxxx1234",
-    "ip": "Please enter the correct IP format"
+    "ip": "Please enter the correct IP format",
+    "moreThanTwoEnglishLettersAndStartWithADot": "More than 2 English letters and start with a dot (.)"
   },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
