refactor lisence component

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -128,7 +128,9 @@
     "recordDate": "Record date",
     "duration": "Duration",
     "days": "Days",
-    "licenseStatus": "Status"
+    "licenseStatus": "Status",
+    "number":"Number",
+    "activeNumbers":"Active Number"
 
   },
   "dashboard": {
