fix: add modalTable

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -50,9 +50,9 @@
     "userStatus": "User Status",
     "fileName": "File Name",
     "type": "Type",
-    "resultScanerStatusSandbox": "SANDBOX Scanner",
-    "resultScanerStatusClamav": "CLAMAV Scanner",
-    "resultScanerStatusYara": " YARA Scanner",
+    "resultScanerStatusSandbox": "Sandbox",
+    "resultScanerStatusClamav": "clamav",
+    "resultScanerStatusYara": " Yara",
     "moreDetail": "More Details",
     "removeSelected": "Remove Selected",
     "daily": "Daily",
