--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -51,9 +51,9 @@
     "userStatus": "وضعیت کاربر",
     "fileName": "نام فایل",
     "type": "تایپ",
-    "resultScanerStatusSandbox": " وضعیت اسکنر SANDBOX",
-    "resultScanerStatusClamav": " وضعیت اسکنر CLAMAV",
-    "resultScanerStatusYara": " وضعیت اسکنر YARA",
+    "resultScanerStatusSandbox": "Sandbox",
+    "resultScanerStatusClamav": "clamav",
+    "resultScanerStatusYara": "Yara",
     "moreDetail": "جزییات بیشتر",
     "removeSelected": "حذف انتخاب",
     "daily": "روزانه",
