fix: resolve the add admin text

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -343,7 +343,7 @@
     "adminInfo": "مشخصات ادمین",
     "userType": "نوع کاربری",
     "createNewAdmin": "ساخت ادمین جدید",
-    "createNewAdminText": "برای ساختن ادمین جدید مشخصات را وارد کنید و دسترسی های مورد نیاز را انتخاب کنید. ",
+    "createNewAdminText": "مشخصات را وارد کنید و دسترسی ها را انتخاب کنید. ",
     "editInformation": "ویرایش مشخصات ",
     "editInformationText": "مشخصات و لیست دسترسی‌های ادمین.",
     "systemAdminDescription": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
