change title name in license

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -142,7 +142,8 @@
     "deleteFile": " Delete File",
     "licenseStatus": "Status",
     "number": "Number",
-    "activeNumbers": "Active Number"
+    "activeNumbers": "Active Number",
+    "license":"License"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
