--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -72,6 +72,7 @@
     "clamav": "clamav",
     "yara": "yara",
     "license_id": "لایسنس",
+    "license":"لایسنس ها",
     "licenseExpirationDate": "تاریخ انقضا",
     "lisenceName": "نام لایسنس‌ها",
     "licenseCreation": "تاریخ ایجاد لایسنس",
