fix: update translate file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -44,7 +44,7 @@
     "unauthorizedBehavior": "Unauthorized Behavior",
     "blocked": "Blocked",
     "action": "Action",
-    "nothingFound": "Nothing Found",
+    "nothingFound": "Nothing Is Found",
     "observeUserBehavior": "Observe User Behavior",
     "numberOfScans": "Number of Scans",
     "userStatus": "User Status",
@@ -257,8 +257,8 @@
     "send": "Send",
     "reportsChart": "ReportsChart",
     "internetLog": "Internet log",
-    "wholeList": "Whole List",
-    "todayList": "Today List",
+    "wholeList": "All list",
+    "todayList": "Today list",
     "notFoundPage": "Page Not Found",
     "goToHome": "go To Home",
     "to": "To",
