feat: update translate file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -339,6 +339,7 @@
     "scannedFiles": "Scanned files"
   },
   "adminList": {
+    "adminList": "Admin List",
     "userInfo": "User Info",
     "adminInfo": "Admin Info",
     "userType": "User type",
