--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -341,6 +341,7 @@
     "scannedFiles": "فایل های اسکن شده"
   },
   "adminList": {
+    "adminList": "لیست ادمین",
     "userInfo": "مشخصات کاربر",
     "adminInfo": "مشخصات ادمین",
     "userType": "نوع کاربری",
