fix: solve the warning isuue

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -11,6 +11,8 @@
     "admin": "Admin"
   },
   "table": {
+    "virusWarning": " ",
+    "downloadRecord": "",
     "admin": "Administrator",
     "user": "User",
     "name": "Username",
