--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -12,6 +12,8 @@
     "admin": "ادمین"
   },
   "table": {
+    "virusWarning": " ",
+    "downloadRecord": "",
     "admin": "ادمین",
     "user": "کاربر",
     "name": "نام",
