fix: change license style at dark mode and change translate title progress chart to scans chart

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -164,7 +164,7 @@
     "extentions": "Extentions List",
     "days": "Days",
     "saveChanges": "Save Changes",
-    "progressChart": "Progress chart",
+    "scanChart": "Scans Chart",
     "activeLicenses": "Active licenses",
     "onlineUsers": "Online users",
     "netsep": "NetSep",
