--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -165,7 +165,7 @@
     "extentions": "فرمت ها",
     "days": "روز",
     "saveChanges": "ثبت تغییرات",
-    "progressChart": "نمودار پیشرفت",
+    "scanChart": "نمودار اسکن ها",
     "activeLicenses": "لایسنس‌های فعال",
     "onlineUsers": "کاربران آنلاین",
     "netsep": "نت سپ",
