--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -297,7 +297,8 @@
     "deleteMember": "Delete Member",
     "user": "user",
     "groupLists": "Group Lists",
-    "member": "member"
+    "member": "member",
+    "createTitle": "Complete the following information to create a new group."
   },
   "onlineAssistance": {
     "loginType": "Login type",
