fix: edit chart page based new data and fixed some bugs

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -305,7 +305,8 @@
     "upload": "upload",
     "limitBySize": "Limit by size",
     "accessToTheUsersDesktop": "Access to the user desktop",
-    "goToSystem": "Go to the system"
+    "goToSystem": "Go to the system",
+    "developing": "Developing ..."
   },
   "groupManagement": {
     "person": "person",
