--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -355,12 +355,14 @@
     "admin": "ادمین",
     "metaAdmin": "سوپر ادمین",
     "choseDomain": "انتخاب دامنه",
-    "systemAdminOtp": "بعد از فعالسازی برای ورود به سامانه قسمت پایین را با تلفن همراه خود اسکن کنید."
+    "systemAdminOtp": "بعد از فعالسازی برای ورود به سامانه قسمت پایین را با تلفن همراه خود اسکن کنید.",
+    "newAdmin": "ادمین جدید",
+    "adminSearch": "جستجو ادمین"
   },
   "userList": {
     "onlineUsers": "کاربران آنلاین",
     "blockedUsers": "کاربران مسدود شده",
-    "searchUsers": "جستجوی کاربر",
+    "searchUsers": "جستجو کاربر",
     "usersList": "لیست کاربران",
     "userAccess": "دسترسی های کاربر",
     "changeUserProfileAndAccessList": "تغییر مشخصات و لیست دسترسی‌های کاربر.",
