feat : groupCreate magyar change

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -298,7 +298,8 @@
     "user": "user",
     "groupLists": "Group Lists",
     "member": "member",
-    "createTitle": "Complete the following information to create a new group."
+    "createTitle": "Complete the following information to create a new group.",
+    "development": "Development"
   },
   "onlineAssistance": {
     "loginType": "Login type",
