--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -299,7 +299,8 @@
     "user": "کاربر",
     "groupLists": "لیست گروه ها",
     "member": "کاربر",
-    "createTitle": "برای ایجاد گروه جدید مشخصات زیر را تکمیل کنید."
+    "createTitle": "برای ایجاد گروه جدید مشخصات زیر را تکمیل کنید.",
+    "development": "توسعه نرم افزار "
   },
   "onlineAssistance": {
     "loginType": "نوع ورود",
