feat: add modal to dass

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -248,8 +248,8 @@
     "webcamAccess": "دسترسی وب کم",
     "uploadAccess": "دسترسی آپلود",
     "downloadAccess": "دسترسی دانلود",
-    "allowedTypeForUpload": "تایپ های مجاز آپلود",
-    "allowedTypeForDownload": "تایپ های مجاز دانلود",
+    "allowedTypeForUpload": "فرمت های مجاز آپلود",
+    "allowedTypeForDownload": "فرمت های مجاز دانلود",
     "doesNot": "ندارد",
     "onlineUsers": "یوزر آنلاین",
     "week": "هفته",
