fix: remove the phICon

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -188,6 +188,7 @@
   "global": {
     "knowledgeManagement": "Knowledge Management",
     "alphabet": "Alphabet",
+    "unlimited": "Unlimited",
     "onlineAdmin": "Online admin",
     "creationDate": "Creation date",
     "choseDomain": "Domain",
@@ -245,10 +246,10 @@
     "maximumDownloadSize": "Maximum Download Size",
     "microphoneAccess": "microphone access",
     "webcamAccess": "Webcam Access",
-    "uploadAccess": "upload access",
-    "downloadAccess": "download Access",
-    "allowedTypeForDownload": "allowed Type For Download",
-    "allowedTypeForUpload": "allowed Type For Upload",
+    "uploadAccess": "Upload access",
+    "downloadAccess": "Download Access",
+    "allowedTypeForDownload": "Allowed Type For Download",
+    "allowedTypeForUpload": "Allowed Type For Upload",
     "doseNot": "does not ",
     "onlineUsers": "Online Users",
     "week": "week",
