--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -189,6 +189,7 @@
   "global": {
     "userName": "نام کاربری",
     "knowledgeManagement": "مدیریت دانش",
+    "unlimited": "بی نهایت",
     "onlineAdmin": "ادمین آنلاین",
     "alphabet": "حروف الفبا",
     "creationDate": "تاریخ ایجاد",
