--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -400,7 +400,9 @@
     "assistanceAdminTitle": "In this section, the groups that the user is an admin of are specified.",
     "areYouSureBlock": "Are you sure you want to block this user?",
     "areYouSureUnBlock": "Are you sure you want to unblock this user's access?",
-    "yourBrowserDoesntSupportVideo": "Your browser does not support this video."
+    "yourBrowserDoesntSupportVideo": "Your browser does not support this video.",
+    "allowedVolume": "Allowed volume",
+    "enterTheAllowedVolumeForThisFormatInTheOppositeField": "Enter the allowed volume for this format in the opposite field"
   },
   "license": {
     "licenseId": "license Id",
