fix : logout & refresh & assistance &  feat: ui assistance

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -200,6 +200,7 @@
     "userName": "Username",
     "password": "Password",
     "requiredField": "This field is required.",
+    "successfullyLoggedOut": "You have successfully logged out",
     "successfullyLogedIn": "You have successfully logged in",
     "exit": "Exit",
     "setting": "Settings",
