--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -202,6 +202,7 @@
     "format": "فرمت",
     "requiredField": "درج این فیلد ضروریست.",
     "successfullyLogedIn": "شما با موفقیت وارد شدید",
+    "successfullyLoggedOut": "شما با موفقیت  خارج شدید",
     "exit": "خروج",
     "setting": "تنظیمات",
     "pageBack": "صفحه قبل",
