--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -189,7 +189,6 @@
   "global": {
     "userName": "نام کاربری",
     "knowledgeManagement": "مدیریت دانش",
-    "unlimited": "بی نهایت",
     "onlineAdmin": "ادمین آنلاین",
     "alphabet": "حروف الفبا",
     "creationDate": "تاریخ ایجاد",
@@ -332,16 +331,15 @@
     "newGroup": "گروه جدید",
     "onlineUsers": "کاربران آنلاین",
     "groupName": "نام گروه ",
-    "searchGroup": "جستجو گروه",
+    "searchGroup": "جستجوی گروه",
+    "addMember": "عضو جدید",
     "saveChanges": "ذخیره تغییرات",
     "deleteMember": "حذف کاربر",
     "user": "کاربر",
     "groupLists": "لیست گروه ها",
     "member": "کاربر",
     "createTitle": "برای ایجاد گروه جدید مشخصات زیر را تکمیل کنید.",
-    "development": "توسعه نرم افزار",
-    "addMember": "افزودن کاربر",
-    "addMemberTitle": "در لیست زیر کاربر مورد نظر را انتخاب کرده و نوع کاربری را مشخص کنید."
+    "development": "توسعه نرم افزار "
   },
   "onlineAssistance": {
     "loginType": "نوع ورود",
@@ -365,8 +363,8 @@
     "alphabetic": "حرف الفبا",
     "creationDate": "تاریخ ایجاد",
     "Newest": "جدیدترین",
-    "recordedActivities": "فعالیت های ضبط شده",
-    "userRecordedActivities": "فعالیت های ضبط شده کاربر"
+    "recordedActivities": "فایل های آنالیز شده",
+    "userRecordedActivities": "فایل های آنالیز شده کاربر"
   },
   "adminList": {
     "adminList": "لیست ادمین",
