Fix: fix translate file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -241,7 +241,7 @@
     "limitedNumberRequest": "The number of your requests has been limited. Please try again in one minute.",
     "pleaseBePatient": "Please be patient",
     "addNewFile": "add new String File",
-    "timeAccess": "time access",
+    "timeAccess": "Time access",
     "hasBeenFinished": "has been finished",
     "maximumUploadSize": "Maximum Upload Size",
     "maximumDownloadSize": "Maximum Download Size",
