--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -190,6 +190,7 @@
     "userName": "نام کاربری",
     "knowledgeManagement": "مدیریت دانش",
     "onlineAdmin": "ادمین آنلاین",
+    "unlimited": "نامحدود",
     "alphabet": "حروف الفبا",
     "creationDate": "تاریخ ایجاد",
     "newest": "جدیدترین",
