--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -136,6 +136,7 @@
     "connection": "اتصال",
     "custom": "سفارشی",
     "block": "مسدود",
+    "inActive": "غیر فعال",
     "assistance": "دستیار",
     "deleteUser": "حذف کاربر",
     "allowed": "مجاز",
